--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,56 @@
-<h1>Hello there!</h1>
-<h2>this is a subtitle</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      html {
+      color: rgb(1, 6, 14);
+      background-color: #00329f;
+      font-size: 12px; /* px means "pixels": the base font size is now 10 pixels high  */
+      font-family: 'Merriweather', serif; /* this should be the rest of the output you got from Google fonts */
+      }
+
+      h1 {
+        font-size: 60px;
+        text-align: center;
+        margin: 0;
+        padding: 20px 0;
+        color: #00539F;
+        text-shadow: 3px 3px 2px black;
+      }
+
+      p, li {
+        font-size: 16px;
+        line-height: 2;
+        letter-spacing: 1px;
+      }
+
+      body {
+        width: 800px;
+        margin: 0 auto;
+        background-color: white;
+        padding: 0 20px 20px 20px;
+        border: 5px solid black;
+      }
+
+      img {
+        display: block;
+        margin: 0 auto;
+      }
+    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>HTML basics tutorial by Mozilla - test page</title>
+  </head>
+  <body>
+    <h1><strong>Filipe Zeferino</strong></h1>
+    <img src="mozilla-firefox-logo.jpg" alt="Mozilla firefox browser logo: a fox on fire around the Earth.">
+    <p>At Mozilla, we’re a global community of</p>
+    <ul>
+      <li>technologists</li>
+      <li>thinkers</li>
+      <li>builders</li>
+    </ul>
+    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/"> Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+  </body>
+</html>
