home, galheta and about pagesupdated

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,29 @@
-<h1>This is the About page</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      html { 
+        background: url(/images/wp4755627-the-lighthouse-wallpapers.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
+      h1 {
+        font-size: 40px;
+        text-align: center;
+        margin: 0;
+        padding: 20px 0;
+        color: white;
+        text-shadow: 3px 3px 2px black;
+        font-family: 'Merriweather', serif;
+      }
+    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>About page</title>
+  </head>
+  <body>
+    <h1>This is the About page</h1>
+  </body>
+</html>
