--- a/app/views/pages/galheta.html.erb
+++ b/app/views/pages/galheta.html.erb
@@ -1,2 +1,29 @@
-<h1>This is the Galheta page</h1>
-<img src="20190128_galheta.jpg" alt="Galheta, Laguna/SC Brasil, 28 de Janeiro de 2019.">
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      html { 
+        background: url(/images/20190128_galheta.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
+      h1 {
+        font-size: 40px;
+        text-align: center;
+        margin: 0;
+        padding: 20px 0;
+        color: white;
+        text-shadow: 3px 3px 2px black;
+        font-family: 'Merriweather', serif;
+      }
+    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Galheta page</title>
+  </head>
+  <body>
+    <h1>This is the Galheta page</h1>
+  </body>
+</html>
