--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
 
       body {
         width: 800px;
-        margin: 0 auto;
+        margin: 30px auto;
         background-color: white;
         padding: 0 20px 20px 20px;
         border: 5px solid black;
@@ -39,18 +39,17 @@
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>HTML basics tutorial by Mozilla - test page</title>
+    <title>Zeferino blog homepage</title>
   </head>
   <body>
     <h1><strong>Filipe Zeferino</strong></h1>
-    <img src="mozilla-firefox-logo.jpg" alt="Mozilla firefox browser logo: a fox on fire around the Earth.">
-    <p>At Mozilla, we’re a global community of</p>
+    <p>This is my tryout blog</p>
     <ul>
-      <li>technologists</li>
-      <li>thinkers</li>
-      <li>builders</li>
+      <li>tests</li>
+      <li>experiments</li>
+      <li>studying</li>
     </ul>
-    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/"> Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+    <p>Check out my linkedin account -> <a href="https://www.linkedin.com/in/filipezef/"> linkedin.com/in/filipezef/</a>.</p>
+    <p>Check out my github repo ->  <a href="https://github.com/filipezef"> github.com/filipezef</a></p>
   </body>
 </html>
