--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,42 +2,41 @@
 <html>
   <head>
     <style>
-      html {
-      color: rgb(1, 6, 14);
-      background-color: #00329f;
-      font-size: 12px; /* px means "pixels": the base font size is now 10 pixels high  */
-      font-family: 'Merriweather', serif; /* this should be the rest of the output you got from Google fonts */
+      html { 
+        background: url(/images/DSC_0026.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
       }
-
+      
       h1 {
-        font-size: 60px;
+        font-size: 40px;
         text-align: center;
+        letter-spacing: 1px;
         margin: 0;
         padding: 20px 0;
-        color: #00539F;
+        color: white;
         text-shadow: 3px 3px 2px black;
+        font-family: 'Audiowide', cursive;
       }
 
       p, li {
         font-size: 16px;
         line-height: 2;
-        letter-spacing: 1px;
+        letter-spacing: 0.5px;
+        color: white;
+        font-family: 'Audiowide', cursive;
       }
 
       body {
-        width: 800px;
-        margin: 30px auto;
-        background-color: white;
-        padding: 0 20px 20px 20px;
-        border: 5px solid black;
+        width: 600px;
+        margin: 30px;
+        padding: 0 20px 20px 20px; 
       }
 
-      img {
-        display: block;
-        margin: 0 auto;
-      }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>Zeferino blog homepage</title>
   </head>
@@ -49,7 +48,7 @@
       <li>experiments</li>
       <li>studying</li>
     </ul>
-    <p>Check out my linkedin account -> <a href="https://www.linkedin.com/in/filipezef/"> linkedin.com/in/filipezef/</a>.</p>
-    <p>Check out my github repo ->  <a href="https://github.com/filipezef"> github.com/filipezef</a></p>
+    <p>Check out my linkedin account: <a href="https://www.linkedin.com/in/filipezef/">linkedin.com/in/filipezef/</a>.</p>
+    <p>Check out my github repo: <a href="https://github.com/filipezef">github.com/filipezef</a></p>
   </body>
 </html>
