--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <head>
     <style>
       html { 
-        background: url(/images/DSC_0026.jpg) no-repeat center center fixed; 
+        background: url(/images/DSC_0026.JPG) no-repeat center center fixed; 
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
