--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,6 +9,7 @@
         -o-background-size: cover;
         background-size: cover;
       }
+
       h1 {
         font-size: 40px;
         text-align: center;
@@ -16,21 +17,35 @@
         margin: 0;
         padding: 20px 0;
         color: white;
-        text-shadow: 3px 3px 2px black;
         font-family: 'Audiowide', cursive;
       }
+
+      h2 {
+        font-size: 18px;
+        letter-spacing: 1px;
+        margin: 0;
+        padding: 20px 0;
+        color: white;
+        font-family: 'Audiowide', cursive;
+      }
+
       p, li {
         font-size: 16px;
-        line-height: 2;
+        line-height: 1.5;
         letter-spacing: 0.5px;
         color: white;
         font-family: 'Audiowide', cursive;
       }
+
       body {
         width: 600px;
         margin: 30px;
-        padding: 0 20px 20px 20px; 
+        padding: 0 20px 20px 20px;
+        font-size: 16px;
+        color: white;
+        font-family: 'Audiowide', cursive;
       }
+
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
     <meta charset="utf-8">
@@ -38,13 +53,8 @@
   </head>
   <body>
     <h1><strong>Filipe Zeferino</strong></h1>
-    <p>This is my tryout blog</p>
-    <ul>
-      <li>tests</li>
-      <li>experiments</li>
-      <li>studying</li>
-    </ul>
-    <p>Check out my linkedin account: <a href="https://www.linkedin.com/in/filipezef/">linkedin.com/in/filipezef/</a>.</p>
+    <h2>This is my tryout blog, thank you for accessing it!</h2>
+    <p>Check out my linkedin account: <a href="https://www.linkedin.com/in/filipezef/">linkedin.com/in/filipezef/</a></p>
     <p>Check out my github repo: <a href="https://github.com/filipezef">github.com/filipezef</a></p>
   </body>
 </html>
