--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,19 +11,29 @@
       }
       h1 {
         font-size: 40px;
-        text-align: center;
-        margin: 0;
-        padding: 20px 0;
+        text-align: right;
+        margin: 40px;
+        padding: 40px 0;
         color: white;
-        text-shadow: 3px 3px 2px black;
-        font-family: 'Merriweather', serif;
+        font-family: 'Audiowide', cursive;
       }
+
+      h2 {
+        font-size: 30px;
+        text-align: right;
+        margin: 40px;
+        padding: 0;
+        color: white;
+        font-family: 'Audiowide', cursive;
+      }
+
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>About page</title>
   </head>
   <body>
     <h1>This is the About page</h1>
+    <h2><i>under construction</i></h2>
   </body>
 </html>
