links to about and galheta pages added to homepage

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -22,7 +22,7 @@
         font-size: 30px;
         text-align: right;
         margin: 40px;
-        padding: 0;
+        padding: 10px 20px 40px 600px;
         color: white;
         font-family: 'Audiowide', cursive;
       }
@@ -30,10 +30,10 @@
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>About page</title>
+    <title>about</title>
   </head>
   <body>
-    <h1>This is the About page</h1>
-    <h2><i>under construction</i></h2>
+    <h1>Filipe Campos Zeferino</h1>
+    <h2><i>An enthusiast Electrical Engineer trying his way out of industry through coding.</i></h2>
   </body>
 </html>
