--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,42 +8,46 @@
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+        font-family: 'Audiowide', cursive;
+        font-size: 14px;
+        color: white;
+        letter-spacing: 1px;
       }
 
       h1 {
         font-size: 40px;
         text-align: center;
-        letter-spacing: 1px;
         margin: 0;
-        padding: 20px 0;
-        color: white;
-        font-family: 'Audiowide', cursive;
+        padding: 20px 0;  
       }
 
       h2 {
         font-size: 18px;
-        letter-spacing: 1px;
         margin: 0;
-        padding: 20px 0;
-        color: white;
-        font-family: 'Audiowide', cursive;
+        padding: 20px 0; 
+      }
+
+      h3 {
+        text-align: center;
+        margin: 0;
+        padding: auto;
+        line-height: 10;
       }
 
       p, li {
         font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.5px;
-        color: white;
-        font-family: 'Audiowide', cursive;
+        line-height: 1.5; 
+      }
+
+      a {
+        font-size: 14px;
+        color: white;  
       }
 
       body {
         width: 600px;
         margin: 30px;
         padding: 0 20px 20px 20px;
-        font-size: 16px;
-        color: white;
-        font-family: 'Audiowide', cursive;
       }
 
     </style>
@@ -56,5 +60,6 @@
     <h2>This is my tryout blog, thank you for accessing it!</h2>
     <p>Check out my linkedin account: <a href="https://www.linkedin.com/in/filipezef/">linkedin.com/in/filipezef/</a></p>
     <p>Check out my github repo: <a href="https://github.com/filipezef">github.com/filipezef</a></p>
+    <h3><a href="/about">About</a> <a href="/galheta">Galheta</a></h3>
   </body>
 </html>
