--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,23 +8,27 @@
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+        color: white;
+        font-family: 'Audiowide', cursive;
       }
       h1 {
         font-size: 40px;
-        text-align: right;
-        margin: 40px;
-        padding: 40px 0;
-        color: white;
-        font-family: 'Audiowide', cursive;
+        text-align: left;
+        padding: 10px 0 0 40px; 
       }
 
       h2 {
         font-size: 30px;
-        text-align: right;
-        margin: 40px;
-        padding: 10px 20px 40px 600px;
+        text-align: left;
+        padding: 20px 20px 20px 40px;
+      }
+
+      h3, a {
+        text-align: left;
+        margin: 20px;
+        padding: auto;
+        line-height: 10;
         color: white;
-        font-family: 'Audiowide', cursive;
       }
 
     </style>
@@ -34,6 +38,7 @@
   </head>
   <body>
     <h1>Filipe Campos Zeferino</h1>
-    <h2><i>An enthusiast Electrical Engineer trying his way out of industry through coding.</i></h2>
+    <h2><i>An enthusiastic Electrical Engineer trying his way out of industry through coding.</i></h2>
+    <h3><a href="/home">Home</a></h3>
   </body>
 </html>
