--- a/app/views/pages/galheta.html.erb
+++ b/app/views/pages/galheta.html.erb
@@ -9,6 +9,8 @@
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+        color: white;
+        font-family: 'Audiowide', cursive;
       }
 
       h1 {
@@ -16,8 +18,6 @@
         text-align: center;
         margin: 0;
         padding: 20px 0;
-        color: white;
-        font-family: 'Audiowide', cursive;
       }
 
       h2 {
@@ -25,8 +25,14 @@
         text-align: center;
         margin: 0;
         padding: 20px 0;
+      }
+
+      h3, a {
+        text-align: center;
+        margin: 0;
+        padding: auto;
+        line-height: 10;
         color: white;
-        font-family: 'Audiowide', cursive;
       }
 
     </style>
@@ -36,6 +42,7 @@
   </head>
   <body>
     <h1>This is the Galheta page</h1>
-    <h2><i>A trully blessed place</i></h2>
+    <h2><i>A truly blessed place</i></h2>
+    <h3><a href="/home">Home</a></h3>
   </body>
 </html>
