--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <% flash.each do |name, msg| %>
+     <h2><strong><%= msg %></strong></h2>
+    <% end %>
     <%= yield %>
   </body>
 </html>
