--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -39,6 +39,6 @@
   <body>
     <h1>Filipe Campos Zeferino</h1>
     <h2><i>An enthusiastic Electrical Engineer trying his way out of industry through coding.</i></h2>
-    <h3><a href="/home">Home</a></h3>
+    <h3><%= link_to 'Home', root_path %></h3>
   </body>
 </html>
