--- a/app/views/pages/galheta.html.erb
+++ b/app/views/pages/galheta.html.erb
@@ -43,6 +43,6 @@
   <body>
     <h1>This is the Galheta page</h1>
     <h2><i>A truly blessed place</i></h2>
-    <h3><a href="/home">Home</a></h3>
+    <h3><%= link_to 'Home', root_path %></h3>
   </body>
 </html>
