home, about and galheta pages updated (corrected)

--- a/app/views/pages/galheta.html.erb
+++ b/app/views/pages/galheta.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <style>
     
@@ -30,7 +30,6 @@
       h3, a {
         text-align: center;
         margin: 0;
-        padding: auto;
         line-height: 10;
         color: white;
       }
