--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <style>
       html { 
@@ -26,7 +26,6 @@
       h3, a {
         text-align: left;
         margin: 20px;
-        padding: auto;
         line-height: 10;
         color: white;
       }
