--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <style>
       html { 
@@ -29,8 +29,7 @@
 
       h3 {
         text-align: center;
-        margin: 0;
-        padding: auto;
+        margin: 0;       
         line-height: 10;
       }
 
