several updates cascaded, inprovements on version 0 and start up of version 1

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,11 @@
+<style>
+  html { 
+    background: url(/images/DSC_0025.JPG) no-repeat center center fixed; 
+  }
+</style>
+
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
+
 <h1>Edit article</h1>
 
 <%= render 'form' %>
