--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,5 @@
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
+
 <h1>Articles listing page</h1>
 
 <table>
@@ -21,6 +23,7 @@
   </thead>
 </table>
 
-<p>
-  <%= link_to 'Create new article', new_article_path %>
-</p>
+<footer class="container">
+  <%= link_to 'Create new article', new_article_path %> |
+  <%= link_to 'Home', root_path %>
+</footer>
