--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,7 +3,7 @@
 
   <head>
 
-    <title>About</title>
+    <title>Zef Page</title>
 
     <meta charset="utf-8">
 
@@ -16,6 +16,8 @@
 
     <header class="primary-header container group">
       
+      
+
       <nav class="nav primary-nav">
 
         <!-- articles feature not to be displayed yet, missing improvements for authentication -->
@@ -32,7 +34,20 @@
         </ul>
       </nav>
 
-    </header>  
+    </header>
+
+    <section class="hero container">
+      <br><h2>Filipe Zeferino</h2><br>
+      <h2>Thanks for accessing my website!</h2>
+      <p>Dedicaded to the documentation of my learning process</p>
+      <a class="btn btn-alt" href="css-html" >CSS + HTML</a>
+      <a class="btn btn-alt" href="js" >Javascript</a>
+      <a class="btn btn-alt" href="python" >Python</a>
+      <a class="btn btn-alt" href="rails" >Rails</a>
+      <a class="btn btn-alt" href="miscelaneous" >Miscelaneous</a>
+    </section>
+
+    
 
     <footer class="primary-footer container group">
       
