--- a/app/views/pages/css_html.html.erb
+++ b/app/views/pages/css_html.html.erb
@@ -3,7 +3,7 @@
 
   <head>
 
-    <title>About</title>
+    <title>CSS HTML</title>
 
     <meta charset="utf-8">
 
@@ -32,7 +32,50 @@
         </ul>
       </nav>
 
-    </header>  
+    </header>
+
+    <section class="hero container">
+      <h2>HTML and CSS road map</h2>
+    </section>
+
+    <section class="row">
+      <div class="grid">
+      
+        <!--Shay Howe-->
+
+        <section class="teaser col-1-3">
+          <h5>Learn to Code HTML &amp; CSS</h5>
+          <a href="https://learn.shayhowe.com/" target="_blank" >
+            <img class="teaser" src="shay-howe.PNG" alt="Shay Howe website homepage">
+            <h3>Develop &amp; Style Websites</h3>
+          </a>
+          <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+        </section><!--
+
+        Schedule
+      
+        --><section class="teaser col-1-3">
+          <h5>Schedule</h5>
+          <a href="schedule.html">
+            <img class="teaser" src="assets/images/home/schedule.jpg" alt="Audience">
+            <h3>Three Inspiring Days</h3>
+          </a>
+          <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+        </section><!--
+
+        Venue
+        
+        --><section class="teaser col-1-3">
+          <h5>Venue</h5>
+          <a href="venue.html">
+            <img class="teaser" src="assets/images/home/venue.jpg" alt="The Chicago Theatre">
+            <h3>The Chicago Theatre</h3>
+          </a>
+          <p>Within the heart of downtown Chicago, the Chicago Theatre will provide a beatifull conference venue.</p>
+        </section>
+
+      </div>
+    </section>
 
     <footer class="primary-footer container group">
       
