CSS + HTML, JS, Python and rails pages updated with attended courses, hero2 class created on CSS for H2 styling

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -361,6 +361,31 @@ p a {
 
 /*
   ========================================
+  HTML & CSS
+  ========================================
+*/
+
+.hero2 {
+  color: #fff;
+  line-height: 44px;
+  padding: 10px 80px 10px 80px;
+  text-align: center;
+}
+.hero2 h2 {
+  font-size: 36px;
+}
+
+
+
+
+
+
+
+
+
+
+/*
+  ========================================
   Speakers
   ========================================
 */
