--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -39,7 +39,7 @@
     <section class="hero container">
       <br><h2>Filipe Zeferino</h2><br>
       <h2>Thanks for accessing my website!</h2>
-      <p>Dedicaded to the documentation of my learning process</p>
+      <p>Check below what I could cover so far on my journey through coding</p>
       <a class="btn btn-alt" href="css-html" >CSS + HTML</a>
       <a class="btn btn-alt" href="js" >Javascript</a>
       <a class="btn btn-alt" href="python" >Python</a>
