--- a/app/views/pages/rails.html.erb
+++ b/app/views/pages/rails.html.erb
@@ -32,7 +32,44 @@
         </ul>
       </nav>
 
-    </header>  
+    </header>
+
+    <section class="hero2 container">
+      <h2>Ruby on Rails learning road map</h2>
+      <h3>Courses and Tutorials</h3>
+    </section>
+
+    <section class="row">
+      <div class="grid">
+
+        <section class="hero2 container">
+          <h3><strong>On going</strong></h3>
+        </section>
+  
+        <!--Udemy - Ruby on Rails-->
+
+        <section class="teaser col-1-3">
+          <h5>Ruby on Rails Developer Course</h5>
+          <a href="https://www.udemy.com/course/the-complete-ruby-on-rails-developer-course/" target="_blank">
+            <img class="teaser" src="/images/rails/ruby-on-rails-developer-udemy.PNG" alt="Udemy - Ruby on Rails Course">
+            <h3>Ruby on Rails Developer Course</h3>
+          </a>
+          <h4>Learn to make innovative web apps with Ruby on Rails and unleash your creativity</h4>
+        </section><!--
+
+        One Bit Code - Pure Ruby
+        
+        --><section class="teaser col-1-3">
+          <h5>One Bit Code - Pure Ruby</h5>
+          <a href="https://onebitcode.com/course/ruby-puro/" target="_blank">
+            <img class="teaser" src="/images/rails/onebitcode-ruby-puro.PNG" alt="One Bit Code - Pure Ruby">
+            <h3>Pure Ruby Course</h3>
+          </a>
+          <h4>10 classes with examples and tutorials, at the end of the course it is proposed a final project to be deployed.</h4>
+        </section>
+
+      </div>
+    </section>
 
     <footer class="primary-footer container group">
       
