--- a/app/views/pages/css_html.html.erb
+++ b/app/views/pages/css_html.html.erb
@@ -3,13 +3,14 @@
 
   <head>
 
-    <title>CSS HTML</title>
+    <title>CSS &map; HTML</title>
 
     <meta charset="utf-8">
 
     <%= stylesheet_link_tag "main" %>
     
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
+
   </head>
 
   <body>
@@ -34,44 +35,78 @@
 
     </header>
 
-    <section class="hero container">
-      <h2>HTML and CSS road map</h2>
+    <section class="hero2 container">
+      <h2>HTML &amp; CSS learning road map</h2>
+      <h3>Courses and Tutorials</h3>
     </section>
 
     <section class="row">
       <div class="grid">
-      
-        <!--Shay Howe-->
+
+        <section class="hero2 container">
+          <h3><strong>On going</strong></h3>
+        </section>
+  
+        <!--Shay Howe - Advanced-->
+
+        <section class="teaser col-1-3">
+          <h5>Learn to Code HTML &amp; CSS - Advanced</h5>
+          <a href="https://learn.shayhowe.com/advanced-html-css/" target="_blank">
+            <img class="teaser" src="/images/css-html/shay-howe-advanced.PNG" alt="Shay Howe website - CSS and HTML advanced">
+            <h3>HTML &amp; CSS - Advanced</h3>
+          </a>
+          <h4>Learn to Code Advanced HTML & CSS takes a deeper look at front-end design and development, expanding on what is covered in the beginner's guide.</h4>
+        </section><!--
+
+        MDN Web Docs - CSS Styling Tables
+        
+        --><section class="teaser col-1-3">
+          <h5>MDN Web Docs - CSS Styling Tables</h5>
+          <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Styling_tables" target="_blank">
+            <img class="teaser" src="/images/css-html/MDN-web-docs-css-styling-tables.PNG" alt="MDN Web Docs logo">
+            <h3>CSS Styling Tables</h3>
+          </a>
+          <h4>This article provides a guide to making HTML tables look good, with some specific table styling techniques highlighted.</h4>
+        </section>
+
+        <section class="hero2 container">
+          <h3><strong>Concluded</strong></h3>
+        </section>
+
+        <!--Shay Howe - Basics-->
 
         <section class="teaser col-1-3">
           <h5>Learn to Code HTML &amp; CSS</h5>
-          <a href="https://learn.shayhowe.com/" target="_blank" >
-            <img class="teaser" src="shay-howe.PNG" alt="Shay Howe website homepage">
+          <h5>(December 2021)</h5>
+          <a href="https://learn.shayhowe.com/html-css/" target="_blank">
+            <img class="teaser" src="/images/css-html/shay-howe-basic.PNG" alt="Shay Howe website - CSS and HTML basics">
             <h3>Develop &amp; Style Websites</h3>
           </a>
-          <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+          <h4>A simple and comprehensive guide dedicated to helping beginners learn HTML and CSS.</h4>
         </section><!--
 
-        Schedule
+        MDN Web Docs - CSS Basics
       
         --><section class="teaser col-1-3">
-          <h5>Schedule</h5>
-          <a href="schedule.html">
-            <img class="teaser" src="assets/images/home/schedule.jpg" alt="Audience">
-            <h3>Three Inspiring Days</h3>
+          <h5>MDN Web Docs - CSS basics</h5>
+          <h5>(December 2021)</h5>
+          <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics" target="_blank">
+            <img class="teaser" src="/images/css-html/MDN-web-docs-css.PNG" alt="MDN Web Docs page - CSS basics">
+            <h3>CSS basics</h3>
           </a>
-          <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+          <h4>CSS basics walks through what you need to get started.</h4>
         </section><!--
 
-        Venue
+        MDN Web Docs - HTML Basics
         
         --><section class="teaser col-1-3">
-          <h5>Venue</h5>
-          <a href="venue.html">
-            <img class="teaser" src="assets/images/home/venue.jpg" alt="The Chicago Theatre">
-            <h3>The Chicago Theatre</h3>
+          <h5>MDN Web Docs - HTML basics</h5>
+          <h5>(December 2021)</h5>
+          <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics" target="_blank">
+            <img class="teaser" src="/images/css-html/MDN-web-docs-html.PNG" alt="MDN Web Docs page - HTML basics">
+            <h3>HTML basics</h3>
           </a>
-          <p>Within the heart of downtown Chicago, the Chicago Theatre will provide a beatifull conference venue.</p>
+          <h4>As the title suggests, this article will give you a basic understanding of HTML and its functions.</h4>
         </section>
 
       </div>
