--- a/app/views/pages/js.html.erb
+++ b/app/views/pages/js.html.erb
@@ -32,7 +32,72 @@
         </ul>
       </nav>
 
-    </header>  
+    </header>
+
+    <section class="hero2 container">
+      <h2>Javascript learning road map</h2>
+      <h3>Courses and Tutorials</h3>
+    </section>
+
+    <section class="row">
+      <div class="grid">
+
+        <section class="hero2 container">
+          <h3><strong>On going</strong></h3>
+        </section>
+  
+        <!--HackerRank - 30 Days of Code-->
+        
+        <section class="teaser col-1-3">
+          <h5>HackerRank - 30 Days of Code</h5>
+          <a href="https://www.hackerrank.com/domains/tutorials/30-days-of-code" target="_blank">
+            <img class="teaser" src="/images/python/hackerrank-30-days-code.PNG" alt="HackerRank - 30 Days of Code">
+            <h3>30 Days of Code</h3>
+          </a>
+          <h4>Tutorial with proposed problems for solution through coding (multiple lenguages supported)</h4>
+        </section><!--
+        
+        HackerRank - Problem Solving
+        
+        --><section class="teaser col-1-3">
+          <h5>HackerRank - Problem Solving</h5>
+          <a href="https://www.hackerrank.com/domains/algorithms/" target="_blank">
+            <img class="teaser" src="/images/python/hackerrank-problem-solving.PNG" alt="HackerRank - Problem Solving">
+            <h3>Problem Solving</h3>
+          </a>
+          <h4>Tutorial with proposed problems for solution through coding (multiple lenguages supported).</h4>
+        </section>
+
+        <section class="hero2 container">
+          <h3><strong>Concluded</strong></h3>
+        </section>
+
+        <!--Trybe - JS basics-->
+
+        <section class="teaser col-1-3">
+          <h5>Trybe - JS basics</h5>
+          <h5>(June 2021)</h5>
+          <a href="https://freecourse.betrybe.com/" target="_blank">
+            <img class="teaser" src="/images/js/trybe.PNG" alt="Trybe free course website">
+            <h3>JS basics</h3>
+          </a>
+          <h4>Course to cover the very basics of coding with JS.</h4>
+        </section><!--
+
+        Hiring Coders - JS Basics
+      
+        --><section class="teaser col-1-3">
+          <h5>Hiring Coders - JS Basics</h5>
+          <h5>(July 2021)</h5>
+          <a href="https://hiringcoders2.slack.com/" target="_blank">
+            <img class="teaser" src="/images/js/hiringcoders.PNG" alt="Hiring Coders free course website">
+            <h3>JS basics</h3>
+          </a>
+          <h4>Course to cover the very basics of coding with JS. No longer available.</h4>
+        </section>
+
+      </div>
+    </section>
 
     <footer class="primary-footer container group">
       
