--- a/app/views/pages/python.html.erb
+++ b/app/views/pages/python.html.erb
@@ -32,7 +32,55 @@
         </ul>
       </nav>
 
-    </header>  
+    </header>
+
+    <section class="hero2 container">
+      <h2>Python learning road map</h2>
+      <h3>Courses and Tutorials</h3>
+    </section>
+
+    <section class="row">
+      <div class="grid">
+
+        <section class="hero2 container">
+          <h3><strong>On going</strong></h3>
+        </section>
+  
+        <!--Udemy - Python 3 Course-->
+
+        <section class="teaser col-1-3">
+          <h5>Python 3 Course</h5>
+          <a href="https://www.udemy.com/course/python-3-do-zero-ao-avancado/" target="_blank">
+            <img class="teaser" src="/images/python/python3-udemy.PNG" alt="Udemy - Python 3 Course">
+            <h3>Python 3 Course</h3>
+          </a>
+          <h4>Coding with Django, PyQT5, Selenium, Regexp, Tests e TDD, POO, Design Patterns GoF and algoritms.</h4>
+        </section><!--
+        
+        HackerRank - 30 Days of Code
+        
+        --><section class="teaser col-1-3">
+          <h5>HackerRank - 30 Days of Code</h5>
+          <a href="https://www.hackerrank.com/domains/tutorials/30-days-of-code" target="_blank">
+            <img class="teaser" src="/images/python/hackerrank-30-days-code.PNG" alt="HackerRank - 30 Days of Code">
+            <h3>30 Days of Code</h3>
+          </a>
+          <h4>Tutorial with proposed problems for solution through coding (multiple lenguages supported)</h4>
+        </section><!--
+        
+        HackerRank - Problem Solving
+        
+        --><section class="teaser col-1-3">
+          <h5>HackerRank - Problem Solving</h5>
+          <a href="https://www.hackerrank.com/domains/algorithms/" target="_blank">
+            <img class="teaser" src="/images/python/hackerrank-problem-solving.PNG" alt="HackerRank - Problem Solving">
+            <h3>Problem Solving</h3>
+          </a>
+          <h4>Tutorial with proposed problems for solution through coding (multiple lenguages supported).</h4>
+        </section>
+
+      </div>
+    </section>
 
     <footer class="primary-footer container group">
       
