--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,8 +2,7 @@
 <html lang="en">
 
   <head>
-
-    <title>Zef Page</title>
+    <title>Filipe Zeferino</title>
 
     <meta charset="utf-8">
 
@@ -13,11 +12,7 @@
   </head>
 
   <body>
-
     <header class="primary-header container group">
-      
-      
-
       <nav class="nav primary-nav">
 
         <!-- articles feature not to be displayed yet, missing improvements for authentication -->
@@ -30,28 +25,24 @@
           --><li><%= link_to "Javascript", js_path %></li><!--
           --><li><%= link_to "Python", python_path %></li><!--
           --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Miscelaneous", miscelaneous_path %></li>
+          --><li><%= link_to "Coding", coding_path %></li>
         </ul>
       </nav>
-
     </header>
 
     <section class="hero container">
       <br><h2>Filipe Zeferino</h2><br>
-      <h2>Thanks for accessing my website!</h2>
-      <p>Check below what I could cover so far on my journey through coding</p>
+      <h2>Welcome to my website!</h2>
+      <p>Check below what I could cover so far on coding</p>
       <a class="btn btn-alt" href="css-html" >CSS + HTML</a>
       <a class="btn btn-alt" href="js" >Javascript</a>
       <a class="btn btn-alt" href="python" >Python</a>
       <a class="btn btn-alt" href="rails" >Rails</a>
-      <a class="btn btn-alt" href="miscelaneous" >Miscelaneous</a>
+      <a class="btn btn-alt" href="coding" >Coding</a>
     </section>
 
-    
-
-    <footer class="primary-footer container group">
-      
-      <small>&copy; My test website</small>
+    <footer class="primary-footer container group"> 
+      <small>&copy; Filipe Zeferino</small>
 
       <nav class="nav-footer">
         
@@ -65,11 +56,9 @@
           --><li><%= link_to "Javascript", js_path %></li><!--
           --><li><%= link_to "Python", python_path %></li><!--
           --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Miscelaneous", miscelaneous_path %></li>
+          --><li><%= link_to "Coding", coding_path %></li>
         </ul>
       </nav>
-
     </footer>
-
   </body>
 </html>
