--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,6 @@
 <html lang="en">
 
   <head>
-
     <title>About</title>
 
     <meta charset="utf-8">
@@ -13,7 +12,6 @@
   </head>
 
   <body>
-
     <header class="primary-header container group">
       
       <nav class="nav primary-nav">
@@ -28,15 +26,64 @@
           --><li><%= link_to "Javascript", js_path %></li><!--
           --><li><%= link_to "Python", python_path %></li><!--
           --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Miscelaneous", miscelaneous_path %></li>
+          --><li><%= link_to "Coding", coding_path %></li>
         </ul>
       </nav>
+    </header>
 
-    </header>  
+    <section class="hero container">
+      <h2>Filipe Campos Zeferino</h2>
+    </section>
+
+    <section class="row-alt">
+      <div class="lead container">
+        <h1>Available for hiring now!</h1>
+        <p>Check below additional inforamtion on my education and professional backgrounds.</p>
+      </div>
+    </section>
+
+     <section class="row">
+      <div class="grid">
+
+        <!-- Aaron Irizarry -->
+
+        <section class="speaker" id="aaron-irizarry">
+
+          <div class="col-2-3">
+
+            <h2>Filipe Zeferino</h2>
+            <h5>Electrical Engineer</h5>
+
+            <h6>Electrical Engineer (UFSC/2010), coordinator of the motor and electrical components subsystem at Nidec-GA/Embraco, Joinville. Extensive experience with project coordination, more than 2 years of residency in other countries. Professional experience in Portugal, England, United States and China.</h6>
+
+            <h6>I identify in the programming the opportunity to pivot my career, which is my main professional objective. I'm very interested and fond of technology, I observe in the programming activity great affinity with my profile and personal skills.</h6>
+
+            <br><h5>Goal</h5>
+
+            <h6>I want to remain motivated and professionally challenged, I have confidence in my delivery capacity and commitment. I seek the opportunity to provide these qualities acting as a programmer. I am willing to face the challenges of a new career and looking forward to the learning opportunity.</h6>
+
+          </div><!--
+
+          --><aside class="col-1-3">
+            <div class="speaker-info">
+
+              <img src="/images/about/perfil2.jpeg" alt="Filipe Zeferino">
+
+              <ul>
+                <li><a href="https://www.linkedin.com/in/filipezef/" target="_blank">linkedin</a></li>
+                <li><a href="https://github.com/filipezef" target="_blank">Github</a></li>
+                <li><a href="https://www.hackerrank.com/filipezef" target="_blank">HackerRank</a></li>
+              </ul>
+            </div>
+          </aside>
+
+        </section>
+
+      </div>
+    </section>
 
     <footer class="primary-footer container group">
-      
-      <small>&copy; My test website</small>
+      <small>&copy; Filipe Zeferino</small>
 
       <nav class="nav-footer">
         
@@ -50,11 +97,9 @@
           --><li><%= link_to "Javascript", js_path %></li><!--
           --><li><%= link_to "Python", python_path %></li><!--
           --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Miscelaneous", miscelaneous_path %></li>
+          --><li><%= link_to "Coding", coding_path %></li>
         </ul>
       </nav>
-
     </footer>
-
   </body>
 </html>
