--- a/app/views/pages/css_html.html.erb
+++ b/app/views/pages/css_html.html.erb
@@ -2,7 +2,6 @@
 <html lang="en">
 
   <head>
-
     <title>CSS &map; HTML</title>
 
     <meta charset="utf-8">
@@ -10,11 +9,9 @@
     <%= stylesheet_link_tag "main" %>
     
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
-
   </head>
 
   <body>
-
     <header class="primary-header container group">
       
       <nav class="nav primary-nav">
@@ -29,40 +26,41 @@
           --><li><%= link_to "Javascript", js_path %></li><!--
           --><li><%= link_to "Python", python_path %></li><!--
           --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Miscelaneous", miscelaneous_path %></li>
+          --><li><%= link_to "Coding", coding_path %></li>
         </ul>
       </nav>
-
     </header>
 
-    <section class="hero2 container">
+    <section class="hero container">
       <h2>HTML &amp; CSS learning road map</h2>
-      <h3>Courses and Tutorials</h3>
+    </section>
+
+    <section class="row-alt">
+      <div class="lead container">
+        <h1>Courses and Tutorials</h1>
+        <p>Currently on going to support Rails web applications, hover over the links to get information about the learning status for each item displayed below.</p>
+      </div>
     </section>
 
     <section class="row">
       <div class="grid">
 
-        <section class="hero2 container">
-          <h3><strong>On going</strong></h3>
-        </section>
-  
         <!--Shay Howe - Advanced-->
 
         <section class="teaser col-1-3">
           <h5>Learn to Code HTML &amp; CSS - Advanced</h5>
-          <a href="https://learn.shayhowe.com/advanced-html-css/" target="_blank">
+          <a href="https://learn.shayhowe.com/advanced-html-css/" title="To be started soon" target="_blank">
             <img class="teaser" src="/images/css-html/shay-howe-advanced.PNG" alt="Shay Howe website - CSS and HTML advanced">
             <h3>HTML &amp; CSS - Advanced</h3>
           </a>
-          <h4>Learn to Code Advanced HTML & CSS takes a deeper look at front-end design and development, expanding on what is covered in the beginner's guide.</h4>
+          <h4>Learn to Code Advanced HTML & CSS takes a deeper look at front-end design and development, expanding on what is covered in the beginner&#8217;s guide.</h4>
         </section><!--
 
         MDN Web Docs - CSS Styling Tables
         
         --><section class="teaser col-1-3">
           <h5>MDN Web Docs - CSS Styling Tables</h5>
-          <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Styling_tables" target="_blank">
+          <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Styling_tables" title="To be started soon" target="_blank">
             <img class="teaser" src="/images/css-html/MDN-web-docs-css-styling-tables.PNG" alt="MDN Web Docs logo">
             <h3>CSS Styling Tables</h3>
           </a>
@@ -77,8 +75,7 @@
 
         <section class="teaser col-1-3">
           <h5>Learn to Code HTML &amp; CSS</h5>
-          <h5>(December 2021)</h5>
-          <a href="https://learn.shayhowe.com/html-css/" target="_blank">
+          <a href="https://learn.shayhowe.com/html-css/" title="Concluded on December 2021" target="_blank">
             <img class="teaser" src="/images/css-html/shay-howe-basic.PNG" alt="Shay Howe website - CSS and HTML basics">
             <h3>Develop &amp; Style Websites</h3>
           </a>
@@ -89,8 +86,7 @@
       
         --><section class="teaser col-1-3">
           <h5>MDN Web Docs - CSS basics</h5>
-          <h5>(December 2021)</h5>
-          <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics" target="_blank">
+          <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics" title="Concluded on December 2021" target="_blank">
             <img class="teaser" src="/images/css-html/MDN-web-docs-css.PNG" alt="MDN Web Docs page - CSS basics">
             <h3>CSS basics</h3>
           </a>
@@ -101,8 +97,7 @@
         
         --><section class="teaser col-1-3">
           <h5>MDN Web Docs - HTML basics</h5>
-          <h5>(December 2021)</h5>
-          <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics" target="_blank">
+          <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics" title="Concluded on December 2021" target="_blank">
             <img class="teaser" src="/images/css-html/MDN-web-docs-html.PNG" alt="MDN Web Docs page - HTML basics">
             <h3>HTML basics</h3>
           </a>
@@ -113,8 +108,7 @@
     </section>
 
     <footer class="primary-footer container group">
-      
-      <small>&copy; My test website</small>
+      <small>&copy; Filipe Zeferino</small>
 
       <nav class="nav-footer">
         
@@ -128,11 +122,9 @@
           --><li><%= link_to "Javascript", js_path %></li><!--
           --><li><%= link_to "Python", python_path %></li><!--
           --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Miscelaneous", miscelaneous_path %></li>
+          --><li><%= link_to "Coding", coding_path %></li>
         </ul>
       </nav>
-
     </footer>
-
   </body>
 </html>
