--- a/app/views/pages/js.html.erb
+++ b/app/views/pages/js.html.erb
@@ -2,7 +2,6 @@
 <html lang="en">
 
   <head>
-
     <title>JS</title>
 
     <meta charset="utf-8">
@@ -13,7 +12,6 @@
   </head>
 
   <body>
-
     <header class="primary-header container group">
       
       <nav class="nav primary-nav">
@@ -28,30 +26,31 @@
           --><li><%= link_to "Javascript", js_path %></li><!--
           --><li><%= link_to "Python", python_path %></li><!--
           --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Miscelaneous", miscelaneous_path %></li>
+          --><li><%= link_to "Coding", coding_path %></li>
         </ul>
       </nav>
-
     </header>
 
-    <section class="hero2 container">
+    <section class="hero container">
       <h2>Javascript learning road map</h2>
-      <h3>Courses and Tutorials</h3>
+    </section>
+
+    <section class="row-alt">
+      <div class="lead container">
+        <h1>Courses and Tutorials</h1>
+        <p>Currently on hold, focusing on Rails. Hover over the the links to get information about the learning status for each item displayed below.</p>
+      </div>
     </section>
 
     <section class="row">
       <div class="grid">
 
-        <section class="hero2 container">
-          <h3><strong>On going</strong></h3>
-        </section>
-  
         <!--HackerRank - 30 Days of Code-->
         
         <section class="teaser col-1-3">
           <h5>HackerRank - 30 Days of Code</h5>
           <a href="https://www.hackerrank.com/domains/tutorials/30-days-of-code" target="_blank">
-            <img class="teaser" src="/images/python/hackerrank-30-days-code.PNG" alt="HackerRank - 30 Days of Code">
+            <img class="teaser" src="/images/python/hackerrank-30-days-code.PNG" title="Currently on day 18 out of 30 (60% completed)" alt="HackerRank - 30 Days of Code">
             <h3>30 Days of Code</h3>
           </a>
           <h4>Tutorial with proposed problems for solution through coding (multiple lenguages supported)</h4>
@@ -62,7 +61,7 @@
         --><section class="teaser col-1-3">
           <h5>HackerRank - Problem Solving</h5>
           <a href="https://www.hackerrank.com/domains/algorithms/" target="_blank">
-            <img class="teaser" src="/images/python/hackerrank-problem-solving.PNG" alt="HackerRank - Problem Solving">
+            <img class="teaser" src="/images/python/hackerrank-problem-solving.PNG" title="On going, currently on silver level (20% completed)" alt="HackerRank - Problem Solving">
             <h3>Problem Solving</h3>
           </a>
           <h4>Tutorial with proposed problems for solution through coding (multiple lenguages supported).</h4>
@@ -76,8 +75,7 @@
 
         <section class="teaser col-1-3">
           <h5>Trybe - JS basics</h5>
-          <h5>(June 2021)</h5>
-          <a href="https://freecourse.betrybe.com/" target="_blank">
+          <a href="https://freecourse.betrybe.com/" title="Concluded on June 2021" target="_blank">
             <img class="teaser" src="/images/js/trybe.PNG" alt="Trybe free course website">
             <h3>JS basics</h3>
           </a>
@@ -88,20 +86,17 @@
       
         --><section class="teaser col-1-3">
           <h5>Hiring Coders - JS Basics</h5>
-          <h5>(July 2021)</h5>
           <a href="https://hiringcoders2.slack.com/" target="_blank">
-            <img class="teaser" src="/images/js/hiringcoders.PNG" alt="Hiring Coders free course website">
+            <img class="teaser" src="/images/js/hiringcoders.PNG" title="Concluded on June 2021" alt="Hiring Coders free course website">
             <h3>JS basics</h3>
           </a>
           <h4>Course to cover the very basics of coding with JS. No longer available.</h4>
         </section>
-
       </div>
     </section>
 
-    <footer class="primary-footer container group">
-      
-      <small>&copy; My test website</small>
+    <footer class="primary-footer container group">    
+      <small>&copy; Filipe Zeferino</small>
 
       <nav class="nav-footer">
         
@@ -115,11 +110,9 @@
           --><li><%= link_to "Javascript", js_path %></li><!--
           --><li><%= link_to "Python", python_path %></li><!--
           --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Miscelaneous", miscelaneous_path %></li>
+          --><li><%= link_to "Coding", coding_path %></li>
         </ul>
       </nav>
-
     </footer>
-
   </body>
 </html>
