--- a/app/views/pages/python.html.erb
+++ b/app/views/pages/python.html.erb
@@ -2,7 +2,6 @@
 <html lang="en">
 
   <head>
-
     <title>Python</title>
 
     <meta charset="utf-8">
@@ -13,13 +12,10 @@
   </head>
 
   <body>
-
     <header class="primary-header container group">
-      
       <nav class="nav primary-nav">
 
         <!-- articles feature not to be displayed yet, missing improvements for authentication -->
-
         <ul>
           <li><%= link_to "Home", root_path %></li><!--
           --><li><%= link_to "About", about_path %></li><!--
@@ -28,29 +24,30 @@
           --><li><%= link_to "Javascript", js_path %></li><!--
           --><li><%= link_to "Python", python_path %></li><!--
           --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Miscelaneous", miscelaneous_path %></li>
+          --><li><%= link_to "Coding", coding_path %></li>
         </ul>
       </nav>
-
     </header>
 
-    <section class="hero2 container">
+    <section class="hero container">
       <h2>Python learning road map</h2>
-      <h3>Courses and Tutorials</h3>
+    </section>
+
+    <section class="row-alt">
+      <div class="lead container">
+        <h1>Courses and Tutorials</h1>     
+        <p>Hover over the links to get information about the learning status for each item displayed below.</p>
+      </div>
     </section>
 
     <section class="row">
       <div class="grid">
-
-        <section class="hero2 container">
-          <h3><strong>On going</strong></h3>
-        </section>
   
         <!--Udemy - Python 3 Course-->
 
         <section class="teaser col-1-3">
           <h5>Python 3 Course</h5>
-          <a href="https://www.udemy.com/course/python-3-do-zero-ao-avancado/" target="_blank">
+          <a href="https://www.udemy.com/course/python-3-do-zero-ao-avancado/" title="On going, currently on class 96 out of 434 (20% completed)" target="_blank">
             <img class="teaser" src="/images/python/python3-udemy.PNG" alt="Udemy - Python 3 Course">
             <h3>Python 3 Course</h3>
           </a>
@@ -61,7 +58,7 @@
         
         --><section class="teaser col-1-3">
           <h5>HackerRank - 30 Days of Code</h5>
-          <a href="https://www.hackerrank.com/domains/tutorials/30-days-of-code" target="_blank">
+          <a href="https://www.hackerrank.com/domains/tutorials/30-days-of-code" title="On going, currently on day 18 out of 30, silver level (60% completed)" target="_blank">
             <img class="teaser" src="/images/python/hackerrank-30-days-code.PNG" alt="HackerRank - 30 Days of Code">
             <h3>30 Days of Code</h3>
           </a>
@@ -73,18 +70,16 @@
         --><section class="teaser col-1-3">
           <h5>HackerRank - Problem Solving</h5>
           <a href="https://www.hackerrank.com/domains/algorithms/" target="_blank">
-            <img class="teaser" src="/images/python/hackerrank-problem-solving.PNG" alt="HackerRank - Problem Solving">
+            <img class="teaser" src="/images/python/hackerrank-problem-solving.PNG" title="On going, currently on silver level (20% completed)" alt="HackerRank - Problem Solving">
             <h3>Problem Solving</h3>
           </a>
           <h4>Tutorial with proposed problems for solution through coding (multiple lenguages supported).</h4>
         </section>
-
       </div>
     </section>
 
     <footer class="primary-footer container group">
-      
-      <small>&copy; My test website</small>
+      <small>&copy; Filipe Zeferino</small>
 
       <nav class="nav-footer">
         
@@ -98,11 +93,9 @@
           --><li><%= link_to "Javascript", js_path %></li><!--
           --><li><%= link_to "Python", python_path %></li><!--
           --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Miscelaneous", miscelaneous_path %></li>
+          --><li><%= link_to "Coding", coding_path %></li>
         </ul>
       </nav>
-
     </footer>
-
   </body>
 </html>
