--- a/app/views/pages/rails.html.erb
+++ b/app/views/pages/rails.html.erb
@@ -2,7 +2,6 @@
 <html lang="en">
 
   <head>
-
     <title>Rails</title>
 
     <meta charset="utf-8">
@@ -13,7 +12,6 @@
   </head>
 
   <body>
-
     <header class="primary-header container group">
       
       <nav class="nav primary-nav">
@@ -28,30 +26,31 @@
           --><li><%= link_to "Javascript", js_path %></li><!--
           --><li><%= link_to "Python", python_path %></li><!--
           --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Miscelaneous", miscelaneous_path %></li>
+          --><li><%= link_to "Coding", coding_path %></li>
         </ul>
       </nav>
-
     </header>
 
-    <section class="hero2 container">
+    <section class="hero container">
       <h2>Ruby on Rails learning road map</h2>
-      <h3>Courses and Tutorials</h3>
+    </section>
+
+    <section class="row-alt">
+      <div class="lead container">
+        <h1>Courses and Tutorials</h1>
+        <p>All currently on going.</p>
+      </div>
     </section>
 
     <section class="row">
       <div class="grid">
 
-        <section class="hero2 container">
-          <h3><strong>On going</strong></h3>
-        </section>
-  
         <!--Udemy - Ruby on Rails-->
 
         <section class="teaser col-1-3">
           <h5>Ruby on Rails Developer Course</h5>
           <a href="https://www.udemy.com/course/the-complete-ruby-on-rails-developer-course/" target="_blank">
-            <img class="teaser" src="/images/rails/ruby-on-rails-developer-udemy.PNG" alt="Udemy - Ruby on Rails Course">
+            <img class="teaser" src="/images/rails/ruby-on-rails-developer-udemy.PNG" title="On going, currently on class 134 out of 446 (30% completed)" alt="Udemy - Ruby on Rails Course">
             <h3>Ruby on Rails Developer Course</h3>
           </a>
           <h4>Learn to make innovative web apps with Ruby on Rails and unleash your creativity</h4>
@@ -62,18 +61,16 @@
         --><section class="teaser col-1-3">
           <h5>One Bit Code - Pure Ruby</h5>
           <a href="https://onebitcode.com/course/ruby-puro/" target="_blank">
-            <img class="teaser" src="/images/rails/onebitcode-ruby-puro.PNG" alt="One Bit Code - Pure Ruby">
+            <img class="teaser" src="/images/rails/onebitcode-ruby-puro.PNG" title="On going, currently on class 10 out of 10 (missing to complete final project)" alt="One Bit Code - Pure Ruby">
             <h3>Pure Ruby Course</h3>
           </a>
           <h4>10 classes with examples and tutorials, at the end of the course it is proposed a final project to be deployed.</h4>
         </section>
-
       </div>
     </section>
 
-    <footer class="primary-footer container group">
-      
-      <small>&copy; My test website</small>
+    <footer class="primary-footer container group"> 
+      <small>&copy; Filipe Zeferino</small>
 
       <nav class="nav-footer">
         
@@ -87,11 +84,9 @@
           --><li><%= link_to "Javascript", js_path %></li><!--
           --><li><%= link_to "Python", python_path %></li><!--
           --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Miscelaneous", miscelaneous_path %></li>
+          --><li><%= link_to "Coding", coding_path %></li>
         </ul>
       </nav>
-
     </footer>
-
   </body>
 </html>
