--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -32,12 +32,11 @@
     </header>
 
     <section class="hero container">
-      <h2>Filipe Campos Zeferino</h2>
+      <h2>Available for hiring now!</h2>
     </section>
 
     <section class="row-alt">
       <div class="lead container">
-        <h1>Available for hiring now!</h1>
         <p>Check below additional inforamtion on my education and professional backgrounds.</p>
       </div>
     </section>
@@ -47,7 +46,7 @@
 
         <!-- Aaron Irizarry -->
 
-        <section class="speaker" id="aaron-irizarry">
+        <section class="about">
 
           <div class="col-2-3">
 
@@ -65,7 +64,7 @@
           </div><!--
 
           --><aside class="col-1-3">
-            <div class="speaker-info">
+            <div class="about-info">
 
               <img src="/images/about/perfil2.jpeg" alt="Filipe Zeferino">
 
