--- a/app/views/pages/rails.html.erb
+++ b/app/views/pages/rails.html.erb
@@ -37,8 +37,7 @@
 
     <section class="row-alt">
       <div class="lead container">
-        <h1>Courses and Tutorials</h1>
-        <p>All currently on going.</p>
+        <p>All currently on going. Hover over the links to get information about the learning status for each item displayed below.</p>
       </div>
     </section>
 
