Articles feature implemented, articles (called as messages on the front end) pages also styled acoording to the main CSS file

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,8 +19,6 @@
     <%= f.text_area :description %>
   </p>
 
-  <p>
-    <%= f.submit %>
-  </p>
+  <a class="btn btn-alt"><%= f.submit %></a>
 
 <% end %>
