--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -59,7 +59,7 @@ table {
 */
 
 body {
-  background: #0a0a0ada;
+  background: #2c2b2b;
   color: #F5F8F8;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -72,8 +72,8 @@ body {
 
 html {
     -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-        box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
 }
 *, *:before, *:after {
   -webkit-box-sizing: inherit;
@@ -139,6 +139,11 @@ html {
    background:    -moz-linear-gradient(to right, #2e2d35, #646964);
    background:         linear-gradient(to right, #2e2d35, #646964);
    padding: 44px 0 22px 0;
+}
+.row-new-article {
+  background: #2c2b2b;
+  width: 500px;
+  margin: auto;
 }
 
 /*
@@ -430,6 +435,70 @@ p a {
   vertical-align: top;
 }
 
+/*
+  ========================================
+  Articles
+  ========================================
+*/
+
+table {
+  margin-bottom: 44px;
+  width: 100%;
+}
+table:last-child {
+  margin-bottom: 0;
+}
+th, td {
+  padding-bottom: 22px;
+  vertical-align: top;
+}
+th {
+  padding-right: 45px;
+  text-align: center;
+  width: 20%;
+}
+td {
+  width: 40%;
+  color: #080808;
+  font-size: 16px;
+}
+thead {
+  line-height: 44px;
+}
+thead th {
+  color: #080808;
+  font-size: 24px;
+}
+tbody th {
+  color: #0b0c0c;
+  font-size: 14px;
+  font-weight: 400;
+  padding-top: 22px;
+  text-transform: uppercase;
+}
+tbody td {
+  border-top: 1px solid #dfe2e5;
+  padding-top: 21px;
+}
+tbody td:first-of-type {
+  padding-right: 15px;
+}
+tbody td:last-of-type {
+  padding-left: 15px;
+}
+tbody td:only-of-type {
+  padding-left: 0;
+  padding-right: 0;
+}
+table a {
+  color: #888;
+}
+table h4 {
+  margin-bottom: 0;
+}
+.schedule-offset {
+  color: #050505;
+}
 
 
 
@@ -494,67 +563,4 @@ textarea {
 }
 .register-group textarea {
   height: 78px;
-}
-
-/*
-  ========================================
-  Schedule
-  ========================================
-*/
-
-table {
-  margin-bottom: 44px;
-  width: 100%;
-}
-table:last-child {
-  margin-bottom: 0;
-}
-th, td {
-  padding-bottom: 22px;
-  vertical-align: top;
-}
-th {
-  padding-right: 45px;
-  text-align: right;
-  width: 20%;
-}
-td {
-  width: 40%;
-}
-thead {
-  line-height: 44px;
-}
-thead th {
-  color: #648880;
-  font-size: 24px;
-}
-tbody th {
-  color: #a9b2b9;
-  font-size: 14px;
-  font-weight: 400;
-  padding-top: 22px;
-  text-transform: uppercase;
-}
-tbody td {
-  border-top: 1px solid #dfe2e5;
-  padding-top: 21px;
-}
-tbody td:first-of-type {
-  padding-right: 15px;
-}
-tbody td:last-of-type {
-  padding-left: 15px;
-}
-tbody td:only-of-type {
-  padding-left: 0;
-  padding-right: 0;
-}
-table a {
-  color: #888;
-}
-table h4 {
-  margin-bottom: 0;
-}
-.schedule-offset {
-  color: #a9b2b9;
 }
