--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,29 +1,77 @@
-<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
 
-<h1>Articles listing page</h1>
+  <head>
+    <title>Articles Index</title>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= link_to 'Show', article_path(article) %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Delete', article_path(article.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </thead>
-</table>
+    <meta charset="utf-8">
 
-<footer class="container">
-  <%= link_to 'Create new article', new_article_path %> |
-  <%= link_to 'Home', root_path %>
-</footer>
+    <%= stylesheet_link_tag "main" %>
+    
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
+  </head>
+
+  <body>
+    <header class="primary-header container group">
+      
+      <nav class="nav primary-nav">
+        <ul>
+          <li><%= link_to "Home", root_path %></li><!--
+          --><li><%= link_to "About", about_path %>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="hero container">
+      <h2>Messages</h2>
+    </section>
+
+    <section class="row-alt">
+      <div class="lead container">
+        <p>Be kind and leave a message for trial purposes.</p>
+        <a class="btn btn-alt" href="/articles/new" >New Message</a>
+      </div>
+    </section>
+
+      <section class="row">
+        <div class="grid">
+
+          <table>
+            <thead>
+              <tr>
+                <th>Title</th>
+                <th>Description</th>
+                <th colspan="3">Options</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @articles.each do |article| %>
+                <tr>
+                  <td><%= article.title %></td>
+                  <td><%= article.description %></td>
+                  <td><%= link_to 'Show', article_path(article) %></td>
+                  <td><%= link_to 'Edit', edit_article_path(article) %></td>
+                  <td><%= link_to 'Delete', article_path(article.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                </tr>
+              <% end %>
+            </thead>
+          </table>
+
+        </div>
+      </section>
+
+    <footer class="primary-footer container group">
+      <small>&copy; Filipe Zeferino</small>
+
+      <nav class="nav-footer">
+        <ul>
+          <li><%= link_to "Home", root_path %></li><!--
+          --><li><%= link_to "About", about_path %></li>
+        </ul>
+      </nav>
+
+    </footer>
+
+  </body>
+
+</html>
