home page updated, only about link available, other links through buttons

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -15,20 +15,14 @@
     <header class="primary-header container group">
       <nav class="nav primary-nav">
         <ul>
-          <li><%= link_to "Home", root_path %></li><!--
-          --><li><%= link_to "About", about_path %></li><!--
-          --><li><%= link_to "CSS + HTML", css_html_path %></li><!--
-          --><li><%= link_to "Javascript", js_path %></li><!--
-          --><li><%= link_to "Python", python_path %></li><!--
-          --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Coding", coding_path %></li>
+          <li><%= link_to "About", about_path %></li>
         </ul>
       </nav>
     </header>
 
     <section class="hero container">
-      <br><h2>Filipe Zeferino</h2><br>
-      <h2>Welcome to my website!</h2>
+      <br>
+      <h2>Welcome to Filipe Zeferino's website!</h2>
       <p>Check below what I could cover so far on coding</p>
       <a class="btn btn-alt" href="css-html" >CSS + HTML</a>
       <a class="btn btn-alt" href="js" >Javascript</a>
@@ -39,7 +33,7 @@
 
     <section class="row-alt">
       <div class="lead container">
-        <p>Check out the CRUD feature just lounched:</p>
+        <p>CRUD feature just launched!</p>
         <a class="btn btn-alt" href="/articles" >CRUD</a>
       </div>
     </section>
@@ -49,15 +43,12 @@
 
       <nav class="nav-footer">
         <ul>
-          <li><%= link_to "Home", root_path %></li><!--
-          --><li><%= link_to "About", about_path %></li><!--
-          --><li><%= link_to "CSS + HTML", css_html_path %></li><!--
-          --><li><%= link_to "Javascript", js_path %></li><!--
-          --><li><%= link_to "Python", python_path %></li><!--
-          --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Coding", coding_path %></li>
+          <li><%= link_to "About", about_path %></li>
         </ul>
       </nav>
+
     </footer>
+
   </body>
+
 </html>
