--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,16 +2,14 @@
 <html lang="en">
 
   <head>
-    <title>Filipe Zeferino</title>
-
     <meta charset="utf-8">
-
+    <title>Home</title>
     <%= stylesheet_link_tag "main" %>
-    
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
   <body>
+    
     <header class="primary-header container group">
       <nav class="nav primary-nav">
         <ul>
@@ -39,6 +37,7 @@
     </section>
 
     <footer class="primary-footer container group"> 
+      
       <small>&copy; Filipe Zeferino</small>
 
       <nav class="nav-footer">
@@ -50,5 +49,4 @@
     </footer>
 
   </body>
-
 </html>
