--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,74 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
+<head> 
+  <title>Messages</title>
+</head>
 
-  <head>
-    <meta charset="utf-8">
-    <title>Articles Index</title>
-    <%= stylesheet_link_tag "main" %>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
-  </head>
+<section class="hero container">
+  <h2>Messages</h2>
+</section>
 
-  <body>
-    
-    <header class="primary-header container group">
-      <nav class="nav primary-nav">
-        <ul>
-          <li><%= link_to "Home", root_path %></li><!--
-          --><li><%= link_to "About", about_path %>
-        </ul>
-      </nav>
-    </header>
+<section class="row-alt">
+  <div class="lead container">
+    <p>Be kind and leave a message for trial purposes.</p>
+    <a class="btn btn-alt" href="/articles/new" >New Message</a>
+  </div>
+</section>
 
-    <section class="hero container">
-      <h2>Messages</h2>
-    </section>
+<section class="row">
+  <div class="grid">
 
-    <section class="row-alt">
-      <div class="lead container">
-        <p>Be kind and leave a message for trial purposes.</p>
-        <a class="btn btn-alt" href="/articles/new" >New Message</a>
-      </div>
-    </section>
+    <table>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Description</th>
+          <th colspan="3">Options</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @articles.each do |article| %>
+          <tr>
+            <td><%= article.title %></td>
+            <td><%= article.description %></td>
+            <td><%= link_to 'View', article_path(article) %></td>
+            <td><%= link_to 'Edit', edit_article_path(article) %></td>
+            <td><%= link_to 'Delete', article_path(article.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </thead>
+    </table>
 
-      <section class="row">
-        <div class="grid">
-
-          <table>
-            <thead>
-              <tr>
-                <th>Title</th>
-                <th>Description</th>
-                <th colspan="3">Options</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @articles.each do |article| %>
-                <tr>
-                  <td><%= article.title %></td>
-                  <td><%= article.description %></td>
-                  <td><%= link_to 'Show', article_path(article) %></td>
-                  <td><%= link_to 'Edit', edit_article_path(article) %></td>
-                  <td><%= link_to 'Delete', article_path(article.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                </tr>
-              <% end %>
-            </thead>
-          </table>
-
-        </div>
-      </section>
-
-    <footer class="primary-footer container group">
-      
-      <small>&copy; Filipe Zeferino</small>
-
-      <nav class="nav-footer">
-        <ul>
-          <li><%= link_to "Home", root_path %></li><!--
-          --><li><%= link_to "About", about_path %></li>
-        </ul>
-      </nav>
-
-    </footer>
-
-  </body>
-</html>
+  </div>
+</section>
