--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,93 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
+<head> 
+  <title>Filipe Zeferino</title>
+</head>
 
-  <head> 
-    <meta charset="utf-8">
-    <title>About</title>
-    <%= stylesheet_link_tag "main" %>  
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
-  </head>
+<section class="hero container">
+  <h2>Available for hiring now!</h2>
+</section>
 
-  <body>
-    
-    <header class="primary-header container group">
-      <nav class="nav primary-nav">
-        <ul>
-          <li><%= link_to "Home", root_path %></li><!--
-          --><li><%= link_to "About", about_path %></li><!--
-          --><li><%= link_to "CSS + HTML", css_html_path %></li><!--
-          --><li><%= link_to "Javascript", js_path %></li><!--
-          --><li><%= link_to "Python", python_path %></li><!--
-          --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Coding", coding_path %></li>
-        </ul>
-      </nav>
-    </header>
+<section class="row-alt">
+  <div class="lead container">
+    <p>Your next software engineer!</p>
+  </div>
+</section>
 
-    <section class="hero container">
-      <h2>Available for hiring now!</h2>
+<section class="row">
+  <div class="grid">
+
+    <section class="about">
+      <div class="col-2-3">
+
+        <h2>Filipe Zeferino</h2>
+        
+        <h6>Electrical Engineer (UFSC/2010), currently coordinating the motor and electrical components subsystem at Nidec-GA/Embraco, Joinville. Extensive experience with project coordination related to product change.</h6>
+        <br><h6>Interested and fond of technology, I observe in the programming activity great affinity with my profile and personal skills.</h6>
+        <br><h6>I'm eager to implement what I could learn so far on a professional environmet, I hope that through this website you can find some use for my skills :)</h6>
+        
+        <br><h5>Carreer Goals</h5>
+        <h6>I want to remain motivated, challenged and valued, facing a feasible and reliable professional road map.</h6>
+
+      </div><!--
+
+      --><aside class="col-1-3">
+        <div class="about-info">
+
+          <img src="/images/about/perfil2.jpeg" alt="Filipe Zeferino">
+
+          <ul>
+            <li><a href="https://github.com/filipezef" target="_blank">Github</a></li>
+            <li><a href="https://www.hackerrank.com/filipezef" target="_blank">HackerRank</a></li>
+            <li><a href="https://www.linkedin.com/in/filipezef/" target="_blank">linkedin</a></li>
+          </ul>
+        </div>
+      </aside>
+
     </section>
 
-    <section class="row-alt">
-      <div class="lead container">
-        <p>Check below additional inforamtion on my education and professional backgrounds.</p>
-      </div>
-    </section>
-
-    <section class="row">
-      <div class="grid">
-
-        <section class="about">
-          <div class="col-2-3">
-
-            <h2>Filipe Zeferino</h2>
-            <h5>Electrical Engineer</h5>
-
-            <h6>Electrical Engineer (UFSC/2010), coordinator of the motor and electrical components subsystem at Nidec-GA/Embraco, Joinville. Extensive experience with project coordination, more than 2 years of residency in other countries. Professional experience in Portugal, England, United States and China.</h6>
-
-            <h6>I identify in the programming the opportunity to pivot my career, which is my main professional objective. I'm very interested and fond of technology, I observe in the programming activity great affinity with my profile and personal skills.</h6>
-
-            <br><h5>Goal</h5>
-
-            <h6>I want to remain motivated and professionally challenged, I have confidence in my delivery capacity and commitment. I seek the opportunity to provide these qualities acting as a programmer. I am willing to face the challenges of a new career and looking forward to the learning opportunity.</h6>
-
-          </div><!--
-
-          --><aside class="col-1-3">
-            <div class="about-info">
-
-              <img src="/images/about/perfil2.jpeg" alt="Filipe Zeferino">
-
-              <ul>
-              	<li><a href="https://github.com/filipezef" target="_blank">Github</a></li>
-                <li><a href="https://www.hackerrank.com/filipezef" target="_blank">HackerRank</a></li>
-                <li><a href="https://www.linkedin.com/in/filipezef/" target="_blank">linkedin</a></li>
-              </ul>
-            </div>
-          </aside>
-
-        </section>
-
-      </div>
-    </section>
-
-    <footer class="primary-footer container group"> 
-      
-      <small>&copy; Filipe Zeferino</small>
-
-      <nav class="nav-footer">
-        <ul>
-          <li><%= link_to "Home", root_path %></li><!--
-          --><li><%= link_to "About", about_path %></li><!--
-          --><li><%= link_to "CSS + HTML", css_html_path %></li><!--
-          --><li><%= link_to "Javascript", js_path %></li><!--
-          --><li><%= link_to "Python", python_path %></li><!--
-          --><li><%= link_to "Rails", rails_path %></li><!--
-          --><li><%= link_to "Coding", coding_path %></li>
-        </ul>
-      </nav>
-
-    </footer>
-
-  </body>
-</html>
+  </div>
+</section>
